--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ div {
 
 /* ID selector to select the element with id 'main-header' */
 #main-header {
-  <h1 id='main-header'>font-size: 22px;</h1>
+  font-size: 22px;
   color:red;
 }
 
 /* Class selector to select elements containing the class 'perspective-questions' */
 .perspective-questions {
-  <p class='perspective-questions'> font-style: italic;
+   font-style: italic;
 }
